[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymthouse-gateway"
version = "0.1.0"
description = "Brandable Python SDK for streaming and accessing Livepeer network capabilities through PymtHouse OIDC + remote signer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "PymtHouse" },
]
keywords = ["pymthouse", "livepeer", "oidc", "byoc", "sse", "ai"]
dependencies = [
    # Pinned from branch feat/remote-signer-byoc (commit 766ee55d9c9d7dff888aa3667a1f8719ba31d273).
    "livepeer-gateway @ git+https://github.com/eliteprox/python-gateway.git@766ee55d9c9d7dff888aa3667a1f8719ba31d273",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
runner = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://pymthouse.com"
Documentation = "https://docs.pymthouse.com"
Repository = "https://github.com/eliteprox/pymthouse-gateway"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymthouse_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
